# ParallelDEVS-Simulator-Multicore-GPU

./: .gitmodules  .project  CMakeLists.txt  README.md  atomic.cuh  devs-cuda.cu  executeBenchmarkTime32Cores.sh  executeBenchmarkTimeDesktopGPU.sh  executeBenchmarkTimeLaptopGPU.sh  executeBenchmarkTimeXeon16Cores.sh  executeDVFSBenchmarkTimeDesktopMulti-GPU.sh  executeDVFSSirTimeDesktopMulti-GPU.sh  executeSIRTimeAMD32Cores.sh  executeSIRTimeXeon16Cores.sh  executeSirTimeDesktopGPU.sh  executeSirTimeDesktopMulti-GPU.sh  executeSirTimeLaptopGPU.sh  executeTimeAMD.sh  executeTimeAMD32Cores.sh  executeTimeDesktopGPU.sh  executeTimeLaptop.sh  executeTimeLaptopGPU.sh  executeTimeXeon.sh  multi_gpu_compile.sh  parallel_helpers.hpp  root_coordinator.cu  setGPUFrequency.sh
affinity/: affinity_helpers.hpp
examples/: main_dynamic_parallel.cpp  main_gpu.cu  main_naive_gpu.cu  main_naive_parallel.cpp  main_sequential.cpp  main_static_parallel.cpp  main_static_parallel_numa.cpp
examples/celldevs_benchmark/: celldevs_benchmark_dynamic_parallel.cpp  celldevs_benchmark_gpu.cu  celldevs_benchmark_multi_gpu.cu  celldevs_benchmark_naive_gpu.cu  celldevs_benchmark_naive_parallel.cpp  celldevs_benchmark_sequential.cpp  celldevs_benchmark_static_parallel.cpp  celldevs_benchmark_static_parallel_numa.cpp
examples/celldevs_benchmark/atomics/: celldevs_benchmark_atomic.cuh  celldevs_benchmark_atomic.hpp
examples/celldevs_benchmark/simulation/: celldevs_benchmark_dynamic_parallel_root_coordinator.hpp  celldevs_benchmark_gpu_root_coordinator.cuh  celldevs_benchmark_multi_gpu_root_coordinator.cu  celldevs_benchmark_multi_gpu_root_coordinator.cuh  celldevs_benchmark_naive_gpu_root_coordinator.cuh  celldevs_benchmark_naive_parallel_root_coordinator.hpp  celldevs_benchmark_sequential_root_coordinator.hpp  celldevs_benchmark_static_parallel_root_coordinator.hpp
examples/celldevs_sir/: celldevs_sir_dynamic_parallel.cpp  celldevs_sir_gpu.cu  celldevs_sir_multi_gpu.cu  celldevs_sir_naive_gpu.cu  celldevs_sir_naive_parallel.cpp  celldevs_sir_sequential.cpp  celldevs_sir_static_parallel.cpp  celldevs_sir_static_parallel_numa.cpp
examples/celldevs_sir/atomics/: celldevs_sir_atomic.cuh  celldevs_sir_atomic.hpp
examples/celldevs_sir/simulation/: celldevs_sir_dynamic_parallel_root_coordinator.hpp  celldevs_sir_gpu_root_coordinator.cuh  celldevs_sir_multi_gpu_root_coordinator.cuh  celldevs_sir_naive_gpu_root_coordinator.cuh  celldevs_sir_naive_parallel_root_coordinator.hpp  celldevs_sir_sequential_root_coordinator.hpp  celldevs_sir_static_parallel_root_coordinator.hpp  celldevs_sir_static_parallel_root_coordinator2.hpp
examples/flops_benchmark/: flops_benchmark_dynamic_parallel.cpp  flops_benchmark_gpu.cu  flops_benchmark_naive_gpu.cu  flops_benchmark_naive_parallel.cpp  flops_benchmark_sequential.cpp  flops_benchmark_static_parallel.cpp  flops_benchmark_static_parallel_numa.cpp
examples/flops_benchmark/atomics/: atomic.hpp
modeling/: atomic.cuh  atomic.hpp  atomic_gpu.cuh
simulation/gpu/: gpu_root_coordinator.cuh  naive_gpu_root_coordinator.cuh
simulation/parallel/: dynamic_parallel_root_coordinator.hpp  naive_parallel_root_coordinator.hpp  static_parallel_root_coordinator.hpp
simulation/sequential/: sequential_root_coordinator.hpp
